[package]
name = "ech-k8s"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = { version = "3.1.0", features = ["client", "runtime", "rustls-tls"] }
kube-lease-manager = "0.11"
futures = "0.3"
axum = "0.8"
petgraph = "0.8.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ech-k8s-derive = { path = "ech-k8s-derive" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
tracing = "0.1"
